testing change to url

--- a/notebook/February 10 2015 - Free Choice Task with Stimulation.ipynb
+++ b/notebook/February 10 2015 - Free Choice Task with Stimulation.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c418dab3db43756f673b685ba1bbdcc99ffb02ad6c85e9b5f1fd6ced6ca90030"
+  "signature": "sha256:91509485f99aa8002ba938f9d7aead229fea20fe2d55690da7462812161ed8db"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Need to debug: probabilities of target selection don't add to one in first few trials. Compare with previous results computed in Matlab."
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
